# events

./: .gitignore  CLAUDE.md  deploy-remote.sh  deploy.config  deploy.sh  nginx.conf
backend/: README.md  main.py  pyproject.toml
backend/api_docs/: events.md  register.md  staff.md
backend/app/api/v1/: __init__.py  auth.py  checkin.py  events.py  host.py  notify.py  registrations.py  staff.py  upload.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: __init__.py  redis.py  session.py
backend/app/models/: __init__.py  clawdchat.py  event.py
backend/app/schemas/: auth.py  event.py
backend/app/services/: clawdchat.py  google.py  llm.py  notify.py  oss.py  ranking.py  scheduler.py  sms.py  verification.py
backend/skill/: skill.md  staff-skill.md
backend/tests/: conftest.py  e2e_full_flow.py  test_auth.py  test_clawdchat_service.py  test_deadline_notify.py  test_events_api.py  test_health.py  test_hv_features.py  test_new_features.py  test_questionnaire.py  test_theme.py  test_upload_mime.py  test_verification.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/components/: description-editor.tsx  event-card.tsx  event-description.tsx  event-feedback.tsx  header-nav.tsx  host-actions.tsx  image-crop-dialog.tsx  image-upload.tsx  qr-scanner.tsx  question-configurator.tsx  register-button.tsx  share-poster-button.tsx  theme-picker.tsx
frontend/src/lib/: api.ts  (+2 more)
scripts/: dev.sh  events-backend.service  events-frontend.service  start.sh  stop.sh
(+17 files in other folders)
